src/css/index.styl
.color--
  &primary
    color: #f18432
  &secondary
    color: #f39b4a
  &white
    color: #fff
  &black
    color: #333
  &gray
    color: #aaa

.border--
  &primary
    border-color: #f18432
  &secondary
    border-color: #f39b4a
  &white
    border-color: #fff
  &black
    border-color: #333
  &gray
    border-color: #aaa

.background--
  &primary
    background-color: #f18432
  &secondary
    background-color: #f39b4a
  &white
    background-color: #fff
  &black
    background-color: #333
  &gray
    background-color: #aaa

.float
  &--right
    float: right
  &--left
    float: left

.align
  &--right
    text-align: right
  &--left
    text-align: left

*
  box-sizing: border-box

a
  color: #f39b4a
  
  &:active,
  &:focus,
  &:hover
    
    &,
    & i:before
      color: #f18432

nav
  flex: 1 1 0px
  height: 10vh
  border-bottom: 1px solid
  display: flex
  justify-content: space-between

.nav
  &__trigger
    flex: 0 0 auto
    font-size: 3vh
    vertical-align: middle

  &__input
    flex: 1 1 287px
    border: none
    outline: none
    pointer-events: none

    @media (max-width: 1005px)
      max-width: 287px

  &__menu
    display: none
    list-style: none
    position: absolute
    top: 0
    right: 10vw
    border: 1px solid
    font-size: 18px
    line-height: 48px
    padding: 10px 20px
    
    ^[0]__input:focus + &,
    ^[0]__input:active + &,
    &:hover
      display: block

header,
footer
  position: fixed
  right: 0
  left: 0
  height: 10vh
  padding: 0 5vw
  line-height: 10vh
  z-index: 10

header
  top: 0
  border-bottom: 1px solid
  font-size: 5vh
  line-height: 10vh
  display: flex

  h1
    flex: 0 0 auto
    font-size: inherit
    margin: 0
    font-weight: normal

  @media (max-width: 1005px)
    font-size: 3vh

footer
  bottom: 0
  border-top: 1px solid

  .footer-link
    font-size: 5vh
    line-height: 10vh
    margin-right: 2vw
    text-decoration: none
    
    &:last-child
      margin-right: 0

section
  min-height: 100vh
  display: flex
  align-items: center
  justify-content: center
  align-content: center
  flex-wrap: wrap
  padding: 10vh 5vw

.quote
  display: flex
  align-items: flex-end

  img + p,
  p + img
    margin-left: 3em

  img
    width: 90px
    border-radius: 45px
    border-width: 3px
    border-style: solid

  &__content
    flex: 1
    position: relative
    
    &:before,
    &:after
      font-size: 3em
      position: absolute
      color: #333
      font-family: serif

    &:before
      content: '\201C'
      top: -0.5em
      left: -0.5em
    &:after
      content: '\201D'
      bottom: -0.5em
      right: -0.5em
      line-height: 0.5em

.role
  padding: 1vh 0
  
  p
    padding: 0
    margin: 5px 0

#about
  & > img
    width: 360px
    max-width: 100%
    border: 1px solid

  & > article
    width: 100%

    @media (min-width: 829px)
      width: 435px
      padding-left: 30px

#recommendations
  background-size: 100% 100%

  figure
    margin: 1vh 10vw
  
  figcaption
    font-style: italic

    &.align--right
      margin-right: 43px

      &:after
        content: '\2B0F'
        font-size: 2em

    &:not(.align--right)
      margin-left: 36px

      &:before
        content: '\2B11'
        font-size: 2em

#experience
  justify-content: flex-start

  h1
    width: 100%
    margin-bottom: 1vh

  @media (min-width: 829px)
    h1
      margin-left: 5vw

    .skew
      margin-left: 10vw
      width: 80vw
      transform: skewX(15deg)

      &__inner
        padding-top: 1vh
        padding-left: 3vh

      &__item
        p
          transform: skewX(-15deg)

    .corner--top-left
      position: relative

      &:before,
      &:after
        content: ''
        position: absolute
        top: -5px
        left: -5px

      &:before
        bottom: -5px
        width: 5px
        background-image: -webkit-gradient(linear, 0 100%, 0 0, from(transparent), to(#f39b4a))
        background-image: -webkit-linear-gradient(#f39b4a, transparent)
        background-image: -moz-linear-gradient(#f39b4a, transparent)
        background-image: -o-linear-gradient(#f39b4a, transparent)

      &:after
        right: -5px
        height: 5px
        background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#f39b4a), to(transparent))
        background-image: -webkit-linear-gradient(left, #f39b4a, transparent)
        background-image: -moz-linear-gradient(left, #f39b4a, transparent)
        background-image: -o-linear-gradient(left, #f39b4a, transparent)

#skills
  background-size: 100% 100%

  &__cloud
    height: 70vh
    width: 100%

.if-mobile
  display: none
  
  @media (max-width: 829px)
    display: block

    & + .else
      display: none

